Fix cross-browser layout issues.

--- a/Bloyteg.RwxViewer.Website/Content/Site.css
+++ b/Bloyteg.RwxViewer.Website/Content/Site.css
@@ -37,10 +37,11 @@ select::-ms-expand {
     display: none;
 }
 
-.optionDropdown label:after {
+.optionDropdown select + label:after {
     content: "▼";
     position: absolute;
-    right: 16px;
+    right: 8px;
+    top: 4px;
 
     color: white;
     pointer-events: none;
@@ -48,7 +49,7 @@ select::-ms-expand {
 
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
     .optionDropdown label:after {
-        margin-top: 4px;
+        margin-top: 2px;
     }
 }
 
@@ -222,11 +223,18 @@ select::-ms-expand {
 
 .optionDropdown select {
     width: 140px;
-    float: right;
+    position: absolute;
+    top: 50%;
+    right: 0;
+
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
 }
 
 .optionDropdown {
-    clear: both;
+    width: 100%;
+    height: 32px;
+    position: relative;
 }
 
 #sidebarSpacer {
@@ -255,16 +263,24 @@ button:disabled, button:disabled:hover {
 }
 
 .optionCheck {
+    position: relative;
     padding: 4px 0 4px 0;
+    width: 100%;
+    height: 24px;
 }
 
 .optionCheck input[type=checkbox] {
     display: none;
-    float: right;
 }
 
 .optionCheck input[type=checkbox] + label {
-    float: right;
+    position: absolute;
+    top: 50%;
+    right: 0;
+
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+
     display: inline-block;
     padding: 4px 4px 4px 4px;
     border-radius: 8px;
@@ -275,8 +291,6 @@ button:disabled, button:disabled:hover {
 
     width: 16px;
     height: 16px;
-
-    position: relative;
 
     cursor: pointer;
 }
